# emoji-captcha

./: .gitmodules  Cargo.toml  Dockerfile  README.md  README.txt  allowed-emojis.txt  docker-compose.yaml
src/: main.rs
