[package]
name = "emoji-captcha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
rand = "0.8.5"
actix-web = "4"
actix-files = "0.6.2"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
tokio = { version = "1", features = ["full"] }
mime = "0.3.16"
